minor update (comment on using proxy - this part is to be improved)
svn path=/trunk/; revision=7320


Former-commit-id: 601814323963356faf6560d2ebeb6d374a34b350